# imgview

./: .gitmodules  CMakeLists.txt  README.md
assets/: image.ppm
include/: image_viewer.h
src/: image_viewer.c  main.c
